--- a/requirements.txt
+++ b/requirements.txt
@@ -20,12 +20,15 @@ Django==1.10.5
 djrill==2.1.0
 easy_thumbnails==2.3
 freezegun
+google-api-python-client==1.6.0
+httplib2==0.9.2
 icalendar==3.11.1
 lxml==3.7.1
 mandrill==1.0.57
 markdown2==2.3.2
 model-mommy==1.3.1
 mock==2.0.0
+oauth2client==2.0.1
 opbeat==3.5.2
 Pillow==4.0.0
 psycopg2==2.6.2
@@ -38,4 +41,5 @@ pytz==2016.10
 requests==2.12.4
 six==1.10.0
 slacker==0.9.30
+uritemplate==3.0.0
 whitenoise==3.2.3
